Fixed off center logo & started mobile styles.

--- a/static/css/apps/home.less
+++ b/static/css/apps/home.less
@@ -5,17 +5,6 @@
 .home {
     text-align: center;
 
-    #home-shape2 {
-        position: absolute;
-        top: 96px;
-        right: 0px;
-        width: 219px;
-        height: 78px;
-        background: transparent url("/static/images/SnakeShape-02.svg") no-repeat;
-        background-size: 219px 78px;
-        background-position: 100px 0px;
-    }
-
     #home-shape4 {
         position: absolute;
         top: 650px;
