--- a/static/css/includes/header.less
+++ b/static/css/includes/header.less
@@ -16,45 +16,129 @@ header {
         background-position: -50px 0px;
     }
 
-}
+    header > .container {
+        padding: 0;
+    }
 
-header > .container {
-    padding-top: 0;
-    padding-bottom: 0;
-}
+    .nav {
+        margin-top: 10px;
+        text-align: center;
+    }
 
-.nav {
-    margin-top: 10px;
-    text-align: center;
-}
+    .header-link {
+        font-size: 24px;
+        padding: 0 2%;
+        vertical-align: bottom;
+        line-height: 60px;
 
-.header-link {
-    font-size: 24px;
-    padding: 0 2%;
-    vertical-align: bottom;
-    line-height: 60px;
+        &:hover, &.active {
+            color: @color-accent3;
+        }
+    }
 
-    &:hover, &.active {
-        color: @color-accent3;
+    .header-logo {
+        text-indent: -9999px;
+        width: 250px;
+        height: 98px;
+        background-size: 234px 98px;
+        background: url("/static/images/logo.png") center center no-repeat;
+        display: inline-block;
+        margin: 0 5% 0 5%;
+    }
+
+    .language-switch {
+        .button;
+        text-align: center;
+        position: absolute;
+        right: 50px;
+    }
+
+    .language-switch-container {
+        margin: 24px 0;
+    }
+
+    .burger {
+        display: none;
     }
 }
 
-.header-logo {
-    text-indent: -9999px;
-    width: 234px;
-    height: 98px;
-    background-size: 234px 98px;
-    background: url("/static/images/logo.png") no-repeat;
-    display: inline-block;
-    margin: 0 10% 0 10%;
-}
+@media only screen and (max-width: 768px) {
 
-.language-switch {
-    .button;
-    text-align: center;
-    float: right;
-}
+    header {
 
-.language-switch-container {
-    margin: 24px 0;
+        #header-shape1 {
+            display: none;
+        }
+        #header-shape2 {
+            display: none;
+        }
+
+        .header-link {
+            display: none;
+        }
+
+        .language-switch {
+            position: relative;
+            visibility: hidden;
+            min-width: 50px;
+            width: 20%;
+            display: inline;
+
+        }
+
+        .mobile-lang {
+            .button;
+            text-align: center;
+            position: absolute;
+            left: 60px;
+            visibility: visible;
+            min-width: 50px;
+        }
+
+        .fr:before {
+            .mobile-lang;
+            content: "Fr";
+        }
+        .en:before {
+            .mobile-lang;
+            content: "En";
+        }
+
+        .language-switch-container {
+            display: inline;
+        }
+
+        .nav {
+            width: 50%;
+            margin: 0;
+            display: inline;
+        }
+        .header-logo {
+            margin: 0;
+        }
+
+        .burger {
+            display: inline;
+        }
+
+        .box-shadow-menu {
+            position: absolute;
+            padding-left: 1.25em;
+            font-size: 25px;
+            text-indent: -9999px;
+        }
+        .box-shadow-menu:before {
+            content: "";
+            position: absolute;
+            left: 0;
+            top: 0.25em;
+            width: 1em;
+            height: 0.1em;
+            background: @color-accent2;
+            box-shadow: 0 0.25em 0 0 @color-accent2,
+            0 0.5em 0 0 @color-accent2;
+        }
+
+    }
+
 }
